<resources>
    <string name="Billing_Cycle">Billing Cycle :</string>
    <string name="CANCEL">CANCEL</string>
    <string name="Click_here_to_go_Service_Dashboard">Click here to go Service Dashboard</string>
    <string name="Comfirm_password">Comfirm Password</string>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="DownloadFailed">Download Failed</string>
    <string name="Due_Date">Due Date :</string>
    <string name="English">Value</string>
    <string name="Enter_subject">Enter subject :</string>
    <string name="First_Time_Payment">First Time Payment :</string>
    <string name="Install_EPG">INSTALL EPG</string>
    <string name="N_A">N/A</string>
    <string name="Next_Due_Date">Next Due Date :</string>
    <string name="Payment_Method">Payment Method :</string>
    <string name="Pricing">Pricing :</string>
    <string name="Prodotto">Product:</string>
    <string name="Product">Product :</string>
    <string name="Recurring_Amount">Recurring Amount :</string>
    <string name="Registration_Date">Registration Date :</string>
    <string name="Remove">Remove</string>
    <string name="Romanian">Value</string>
    <string name="Service_Buy_Now">| Service Buy Now</string>
    <string name="Service_Information">| Service Information</string>
    <string name="Speed">Speed</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="Use_no_proxy">None</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abi_mismatch">Preferred native ABI precedence of this device (%1$s) and ABI reported by native libraries (%2$s) mismatch</string>
    <string name="ability_to_change_player_and_player_settings">- Ability to change player and player settings</string>
    <string name="accept">Accept</string>
    <string name="access_denied">Access Denied, <u><font color="#8B0000">Click here</font></u> to allow the permission</string>
    <string name="accouncement">Announcements</string>
    <string name="account">ACCOUNT</string>
    <string name="account_active_connections">Active Connections:</string>
    <string name="account_code">Active Code:</string>
    <string name="account_created">Account created successfully!</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="apprest_name">Name</string>
    <string name="apprest_name_desc">Name of the VPN profile</string>
    <string name="apprest_ovpn">Config</string>
    <string name="apprest_ovpn_desc">Content of the OpenVPN configuration file. These files are usually have the extension .ovpn (sometimes also .conf) and are plain text multi line configuration files. If your MDM does not support multiline configuration entries, you can also use a base64 encoded string here. A text file can be converted to base64 using openssl base64 -A -in</string>
    <string name="apprest_uuid">UUID</string>
    <string name="apprest_uuid_desc">Unique UUID that identifies the profile (example: 0E910C15–9A85-4DD9-AE0D-E6862392E638). Generate using uuidgen or similar tools</string>
    <string name="apprest_ver">Version of the managed configuration schema</string>
    <string name="apprest_vpnconf">VPN configuration</string>
    <string name="apprest_vpnlist">List of VPN configurations</string>
    <string name="auth_username">Username</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="device_button_title">View Device Information</string>
    <string name="device_view_title">Device Information</string>
    <string name="downloaded_data">Download</string>
    <string name="env_button_title">View Environment Information</string>
    <string name="env_view_title">Environment Information</string>
    <string name="file_issue_button_title">File Issue</string>
    <string name="file_issue_view_title">File Issue</string>
    <string name="hide_channel_name">Hide Channel Name</string>
    <string name="hide_movie_name">Hide Movie Name</string>
    <string name="hide_series_name">Hide Series Name</string>
    <string name="load_channels_vod">Refresh Channels, Movies and Series</string>
    <string name="load_tv_guide">Refresh TV Guide</string>
    <string name="logs_button_title">View Logs</string>
    <string name="logs_view_title">Logs</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_remove_from_recently_watched">Remove From Channels History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_title">Amplify Developer Menu</string>
    <string name="menu_view_details">Movie Info</string>
    <string name="nav_play">Play</string>
    <string name="password">Password</string>
    <string name="play_with_cast">Play With Cast</string>
    <string name="play_with_mx_player">Play with Mx Player</string>
    <string name="play_with_vlc_player">Play with VLC Player</string>
    <string name="pref_key_enable_background_play">pref.enable_background_play</string>
    <string name="pref_key_enable_detached_surface_texture">pref.enable_detached_surface_texture</string>
    <string name="pref_key_enable_no_view">pref.enable_no_view</string>
    <string name="pref_key_enable_surface_view">pref.enable_surface_view</string>
    <string name="pref_key_enable_texture_view">pref.enable_texture_view</string>
    <string name="pref_key_media_codec_handle_resolution_change">pref.media_codec_handle_resolution_change</string>
    <string name="pref_key_pixel_format">pref.pixel_format</string>
    <string name="pref_key_player">pref.player</string>
    <string name="pref_key_using_media_codec">pref.using_media_codec</string>
    <string name="pref_key_using_media_codec_auto_rotate">pref.using_media_codec_auto_rotate</string>
    <string name="pref_key_using_mediadatasource">pref.using_mediadatasource</string>
    <string name="pref_key_using_opensl_es">pref.using_opensl_es</string>
    <string name="pref_summary_enable_background_play">need Android 4.0+</string>
    <string name="pref_summary_enable_detached_surface_texture" />
    <string name="pref_summary_enable_no_view" />
    <string name="pref_summary_enable_surface_view" />
    <string name="pref_summary_enable_texture_view" />
    <string name="pref_summary_media_codec_handle_resolution_change" />
    <string name="pref_summary_using_media_codec" />
    <string name="pref_summary_using_media_codec_auto_rotate" />
    <string name="pref_summary_using_mediadatasource" />
    <string name="pref_summary_using_opensl_es" />
    <string name="pref_title_enable_background_play">Enable background play</string>
    <string name="pref_title_enable_detached_surface_texture">Enable detached SurfaceTexture</string>
    <string name="pref_title_enable_no_view">Enable NoView</string>
    <string name="pref_title_enable_surface_view">Enable SurfaceView</string>
    <string name="pref_title_enable_texture_view">Enable TextureView</string>
    <string name="pref_title_general">General</string>
    <string name="pref_title_ijkplayer_audio">Audio: ijkplayer</string>
    <string name="pref_title_ijkplayer_video">Video: ijkplayer</string>
    <string name="pref_title_media_codec_handle_resolution_change">MediaCodec handle resolution change</string>
    <string name="pref_title_misc">Misc</string>
    <string name="pref_title_pixel_format">Pixel Format</string>
    <string name="pref_title_player">Choose Player</string>
    <string name="pref_title_render_view">RenderView</string>
    <string name="pref_title_using_media_codec">Using MediaCodec</string>
    <string name="pref_title_using_media_codec_auto_rotate">Using MediaCodec auto rotate</string>
    <string name="pref_title_using_mediadatasource">Using MediaDataSource</string>
    <string name="pref_title_using_opensl_es">Using OpenSL ES</string>
    <string name="recording_start">Start Recording</string>
    <string name="remove_from_favourite">Remove From Favourite</string>
    <string name="save_password">Save Password</string>
    <string name="search">Search</string>
    <string name="show_channel_name">Show Channel Name</string>
    <string name="show_movie_name">Show Movie Name</string>
    <string name="show_password">Show password</string>
    <string name="show_series_name">Show Series Name</string>
    <string name="sort_optn">SORT</string>
    <string name="uploaded_data">Upload</string>
    <string name="view_Linear">List View</string>
    <string name="view_grid">Grid View</string>
    <string name="vpn_status">Vpn Status</string>
</resources>