<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/play" android:id="@id/nav_play" android:title="@string/nav_play" />
    <item android:icon="@drawable/play" android:id="@id/nav_play_with_vlc" android:visible="false" android:title="@string/play_with_vlc_player" />
    <item android:icon="@drawable/play" android:id="@id/nav_play_with_mx" android:visible="false" android:title="@string/play_with_mx_player" />
    <item android:id="@id/nav_add_to_fav" android:visible="false" android:title="@string/add_to_favourite" />
    <item android:id="@id/nav_remove_from_fav" android:visible="false" android:title="@string/remove_from_favourite" />
    <item android:id="@id/nav_delete_from_recentwatch" android:visible="false" android:title="@string/delete" />
    <item android:id="@id/menu_view_details" android:title="@string/menu_view_details" />
    <item android:id="@id/play_with_cast" android:visible="false" android:title="@string/play_with_cast" />
</menu>