<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/nav_play_with_vlc" android:visible="false" android:title="@string/play_with_vlc_player" />
    <item android:id="@id/nav_play_with_mx" android:visible="false" android:title="@string/play_with_mx_player" />
    <item android:id="@id/nav_add_to_fav" android:visible="false" android:title="@string/add_to_favourite" />
    <item android:id="@id/nav_remove_from_fav" android:visible="false" android:title="@string/remove_from_favourite" />
    <item android:id="@id/nav_recording" android:visible="false" android:title="@string/recording_start" />
    <item android:id="@id/play_with_cast" android:visible="false" android:title="@string/play_with_cast" />
    <item android:id="@id/menu_remove_from_recently_watched" android:visible="false" android:title="@string/menu_remove_from_recently_watched" />
</menu>