<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/search_view" android:id="@id/action_search" android:title="@string/search" app:actionViewClass="androidx.appcompat.widget.SearchView" app:showAsAction="collapseActionView|ifRoom" />
    <item android:icon="@drawable/menu_dots" android:id="@id/empty" android:orderInCategory="101" android:title="inner" app:showAsAction="always">
        <menu>
            <item android:icon="@drawable/logout_icon_menu" android:id="@id/action_logout1" android:orderInCategory="100" android:title="@string/menu_logout" />
            <item android:icon="@drawable/home_icon_black" android:id="@id/nav_home" android:title="@string/menu_home" />
            <item android:icon="@drawable/listview_menu" android:id="@id/layout_view_linear" android:visible="true" android:title="@string/view_Linear" />
            <item android:icon="@drawable/gridview_menu" android:id="@id/layout_view_grid" android:visible="true" android:title="@string/view_grid" />
            <item android:icon="@drawable/refresh_icon" android:id="@id/menu_load_channels_vod1" android:title="@string/load_channels_vod" />
            <item android:icon="@drawable/guide_icon_menu" android:id="@id/menu_load_tv_guide1" android:visible="false" android:title="@string/load_tv_guide" />
            <item android:icon="@drawable/sort" android:id="@id/menu_sort" android:visible="false" android:title="@string/sort_optn" />
            <item android:icon="@drawable/settings_icon_black" android:id="@id/nav_settings" android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>