<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/media_route_menu_item" android:orderInCategory="101" android:title="@string/media_route_menu_title" app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider" app:showAsAction="always" />
    <item android:icon="@drawable/menu_dots" android:id="@id/empty" android:orderInCategory="102" android:title="inner" app:showAsAction="always">
        <menu>
            <item android:icon="@drawable/logout_icon_menu" android:id="@id/action_logout" android:orderInCategory="100" android:title="@string/menu_logout" />
            <item android:icon="@drawable/home_icon_black" android:id="@id/nav_home" android:title="@string/menu_home" />
            <item android:icon="@drawable/refresh_icon" android:id="@id/menu_load_channels_vod" android:title="@string/load_channels_vod" />
            <item android:icon="@drawable/guide_icon_menu" android:id="@id/menu_load_tv_guide" android:visible="false" android:title="@string/load_tv_guide" />
            <item android:icon="@drawable/settings_icon_black" android:id="@id/nav_settings" android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>